--- a/lol/index.html
+++ b/lol/index.html
@@ -33,25 +33,92 @@
     <header class="header">
       <div class="header-logo">
         <i class="fa-solid fa-star"></i>
-        <p class="title-font">롤스타팀</p>
+        <p class="title-font-family">롤스타팀</p>
       </div>
       <ul class="header-menu">
-        <li class="menu title-font">공지사항</li>
-        <li class="menu title-font">기사라인업</li>
-        <li class="menu title-font">가격표</li>
-        <li class="menu title-font">작업현황</li>
-        <li class="menu title-font">작업인증</li>
-        <li class="menu title-font">작업후기</li>
-        <li class="menu title-font">FAQ</li>
+        <li class="menu title-font-family">공지사항</li>
+        <li class="menu title-font-family">기사라인업</li>
+        <li class="menu title-font-family">가격표</li>
+        <li class="menu title-font-family">작업현황</li>
+        <li class="menu title-font-family">작업인증</li>
+        <li class="menu title-font-family">작업후기</li>
+        <li class="menu title-font-family">FAQ</li>
         <img
           src="/image/059f8bf3e629d3f2e343fe3f3f10809022d58800962db675d233429660bf98d9ceccd60e23b1324d090c87485833b10c2c4503c93a230003ba67d5fcafa527931d85e527b3913564f53df01f1af61ec0a23680cc8f9108eb81f3e46b5c00649c.svg"
           alt="카카오톡 아이디 : fnatictok"
         />
-        <li class="menu title-font">ID:fnatictok</li>
+        <li class="menu title-font-family">ID:fnatictok</li>
       </ul>
     </header>
-    <div class="main"></div>
-    <div class="card"></div>
+    <div class="main">
+      <div class="main-img">
+        <!-- <img src="/image/irelia_splash_7.jpg" alt="" /> -->
+        <div class="main-container">
+          <div class="main-box">
+            <p class="main-event border-rounded">이벤트1</p>
+            <p>
+              대리랭크 <span class="main-color">15판 진행시</span>,
+              <span class="main-color">1판서비스</span>
+            </p>
+          </div>
+          <div class="main-box">
+            <p class="main-event border-rounded">이벤트2</p>
+            <p>
+              듀오랭크 <span class="main-color">10판 진행시</span>,
+              <span class="main-color">1판 서비스</span>
+            </p>
+          </div>
+          <div class="main-box">
+            <p class="main-event border-rounded">이벤트3</p>
+            <p>
+              <span class="main-color">신규 단골고객님</span> 10%할인/지인추천
+              <span class="main-color">10% 할인</span>
+            </p>
+          </div>
+          <div class="main-box">
+            <p class="main-event border-rounded">이벤트4</p>
+            <p>
+              매달 <span class="main-color">BEST 5 후기</span> 작성자
+              <span class="main-color">3000원 할인권</span> 증정
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="main-img">
+        <img src="/image/gwen_splash_0.jpg" alt="" />
+        <div></div>
+      </div>
+      <div class="main-img">
+        <img src="/image/Riven_Splash_8.jpg" alt="" />
+        <div></div>
+      </div>
+    </div>
+    <div class="notice">
+      <div class="card border-2">
+        <div class="card-image">
+          <p>공지사항</p>
+          <button></button>
+        </div>
+      </div>
+      <div class="card border-2">
+        <div class="card-image">
+          <p>작업현황</p>
+          <button></button>
+        </div>
+      </div>
+      <div class="card border-2">
+        <div class="card-image">
+          <p>작업인증</p>
+          <button></button>
+        </div>
+      </div>
+      <div class="card border-2">
+        <div class="card-image">
+          <p>작업후기</p>
+          <button></button>
+        </div>
+      </div>
+    </div>
     <div class="introduce"></div>
     <div class="icons"></div>
     <div class="FAQ"></div>
