--- a/lol/index.html
+++ b/lol/index.html
@@ -52,31 +52,31 @@
     </header>
     <div class="main">
       <div class="main-img">
-        <!-- <img src="/image/irelia_splash_7.jpg" alt="" /> -->
+        <img src="/image/irelia_splash_7.jpg" alt="" />
         <div class="main-container">
           <div class="main-box">
-            <p class="main-event border-rounded">이벤트1</p>
+            <p class="main-event">이벤트1</p>
             <p>
               대리랭크 <span class="main-color">15판 진행시</span>,
               <span class="main-color">1판서비스</span>
             </p>
           </div>
           <div class="main-box">
-            <p class="main-event border-rounded">이벤트2</p>
+            <p class="main-event">이벤트2</p>
             <p>
               듀오랭크 <span class="main-color">10판 진행시</span>,
               <span class="main-color">1판 서비스</span>
             </p>
           </div>
           <div class="main-box">
-            <p class="main-event border-rounded">이벤트3</p>
+            <p class="main-event">이벤트3</p>
             <p>
               <span class="main-color">신규 단골고객님</span> 10%할인/지인추천
               <span class="main-color">10% 할인</span>
             </p>
           </div>
           <div class="main-box">
-            <p class="main-event border-rounded">이벤트4</p>
+            <p class="main-event">이벤트4</p>
             <p>
               매달 <span class="main-color">BEST 5 후기</span> 작성자
               <span class="main-color">3000원 할인권</span> 증정
@@ -97,32 +97,145 @@
       <div class="card border-2">
         <div class="card-image">
           <p>공지사항</p>
-          <button></button>
+          <button>자세히보기</button>
         </div>
+        <div style="width: 100%; height: 160px; background: white"></div>
       </div>
       <div class="card border-2">
         <div class="card-image">
           <p>작업현황</p>
-          <button></button>
+          <button>자세히보기</button>
         </div>
+        <div style="width: 100%; height: 160px; background: white"></div>
       </div>
       <div class="card border-2">
         <div class="card-image">
           <p>작업인증</p>
-          <button></button>
+          <button>자세히보기</button>
         </div>
+        <div style="width: 100%; height: 160px; background: white"></div>
       </div>
       <div class="card border-2">
         <div class="card-image">
           <p>작업후기</p>
-          <button></button>
+          <button>자세히보기</button>
+        </div>
+        <div style="width: 100%; height: 160px; background: white"></div>
+      </div>
+      
+    </div>
+    <div class="icons">
+      <p>WE ARE LOLSTARTEAM</p>
+      <div class="icons-container">
+        <div class="icon">
+  
+          <div class="icon-box"><i class="fa-solid fa-bolt-lightning" style="left: 14px;"></i></div>
+          <div class="icon-text">
+            <p>대리랭크</p>
+            <p>원하시는 승수만큼 신속하고 빠른 롤대리 작업이 진행됩니다.
+              승률, 작업속도 1위 롤스타팀 기사님들이 직접 진행합니다.</p>
+          </div>
+        </div>
+        <div class="icon">
+          <div class="icon-box"><i class="fa-solid fa-people-pulling" style="left: 6px;"></i></div>
+          <div class="icon-text">
+            <p>듀오랭크</p>
+            <p>매판 있는 트롤때문에 힘든 게임, 롤스타팀 기사님들과 함께라면 다릅니다.
+              즐거운 게임을 할 수 있게 도와드리겠습니다.</p>
+          </div>
+        </div>
+        <div style="clear: both"></div>
+        <div class="icon">
+          <div class="icon-box"><i class="fa-solid fa-graduation-cap" style="left: 2px;"></i></div>
+          <div class="icon-text">
+            <p>배치고사</p>
+            <p>리그오브레전드에서 가장 중요한 매시즌 첫단추를 채우는 배치고사 저희 롤스타팀 기사님들이 책임져 드리겠습니다.</p>
+          </div>
+        </div>
+        <div class="icon">
+          <div class="icon-box"><i class="fa-solid fa-people-arrows-left-right" style="left: 4px;"></i></div>
+          <div class="icon-text">
+            <p>1:1강의</p>
+            <p>저희 롤스타팀은 1:1강의 전문 강사님과 함께하고 있습니다.
+              차별화된 강의시스템을 느껴보세요.</p>
+          </div>
+        </div>
+        <div style="clear: both"></div>
+        <div class="icon">
+          <div class="icon-box"><i class="fa-solid fa-person-running" style="left: 12px;"></i></div>
+          <div class="icon-text">
+            <p>육성</p>
+            <p>모든 육성은 수작업을 통해 진행됩니다.
+              전문 육성기사님의 노하우로 신속하고 빠르게 도와 드리겠습니다.</p>
+          </div>
+        </div>
+        <div class="icon">
+          <div class="icon-box"><i class="fa-solid fa-star" style="left: 4px;"></i></div>
+          <div class="icon-text">
+            <p>육성 패키지</p>
+            <p>육성과 배치고사를 할인된 가격에 진행 도와드립니다.</p>
+          </div>
+        </div>
+        <div style="clear: both">
+        
+        </div>
+    </div>
+    </div>
+    <div class="FAQ">
+      <p>FAQ</p>
+      <div class="FAQ-container">
+      <div class="FAQ-item">
+        <span><i class="fa-solid fa-plus"></i></span>
+        <p>Q.롤 대리란?</p>
+      </div>
+      <div class="FAQ-item">
+        <span><i class="fa-solid fa-plus"></i></span>
+        <p>Q.대리랭크와 듀오랭크의 차이가 무엇인가요?</p>
+      </div>
+      <div class="FAQ-item">
+        <span><i class="fa-solid fa-plus"></i></span>
+        <p>Q.대리로 정지 당할까봐 불안해요. 정지위험성은 없나요?</p>
+      </div>
+      <div class="FAQ-item">
+        <span><i class="fa-solid fa-plus"></i></span>
+        <p>Q.대리로 정지 당할까봐 불안해요. 정지위험성은 없나요?</p>
+      </div>
+      <div class="FAQ-item">
+        <span><i class="fa-solid fa-plus"></i></span>
+        <p>듀오랭크 이용시 잔여판수는 사라지나요?</p>
+      </div>
+      </div>
+    <footer class="footer"><div class="footer-container">
+      <div class="footer-item">
+        <p>OUR SERVICE</p>
+        <div class="footer-itemlist">
+          <p>대리랭크</p>
+          <p>듀오랭크</p>
+          <p>배치고사</p>
+          <p>1:1강의</p>
+        </div>
+      </div>
+      <div class="footer-item">
+        <p>THE WORK</p>
+        <div class="footer-itemlist">
+          <p>기사라인업</p>
+          <p>작업현황</p>
+          <p>작업인증</p>
+          <p>작업후기</p>
+        </div>
+      </div>
+      <div class="footer-item">
+        <p> SERVICE CENTER</p>
+        <div class="footer-itemlist">
+          <p>공지사항</p>
+          <p>개인정보 보호정책</p>
+          <p>리그오브레전드</p>
         </div>
       </div>
     </div>
-    <div class="introduce"></div>
-    <div class="icons"></div>
-    <div class="FAQ"></div>
-    <footer></footer>
+    <div style="clear: both;"></div>
+  <div class="lastfooter"><span>롤스타팀</span><span>Copyright © 2021 롤스타팀. All rights reserved.</span>
+  </div></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
